# FIDBS

./: .gitignore  CMakeLists.txt  Table.h  cHashTable.h  cHashTableNode.h  cHeapTable.h  cMemory.h  cRecordHeapTable.h  hashTable_test.cpp  heapTable_test.cpp  main_test.cpp  test.cpp
BitmapIndex/: BitString.h  BitmapIndex.cpp  BitmapIndex.h  BitmapQuery.cpp  CMakeLists.txt  ColumnQuery.cpp  HashQuery.cpp  ParallelQuery.cpp  QuerySet.h  TableSchema.cpp  TableSchema.h  cColumnStoreTable.cpp  cColumnStoreTable.h  cRowHeapTable.cpp  cRowHeapTable.h  main.cpp
BitmapIndex/DataStructures/: Cursor.h  HashTable.h  HashTableNode.h  Memory.cpp  Memory.h
DataStructures/: cHashTableNode.h
DataStructures/Indexes/: cBitmapIndex.h
DataStructures/Tables/: cHashTable.h  cHeapTable.h  cRecordHeapTable.h  cRowHeapTable.h
HeapTable/: hashTable_test.cpp  heapTable_test.cpp  main_test.cpp
HeapTable/DataStructures/: cHashTableNode.h  cMemory.h
HeapTable/DataStructures/Tables/: Record.h  Table.h  cHeapTable.h  cRowHeapTable.h
HeapTable/tests/: memory_access_test.h  utils.h
tests/: hash_table_test.h  heap_table_test.h
